--- a/interpreter/dialog.css
+++ b/interpreter/dialog.css
@@ -13,7 +13,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #2b2b2b;
+  background: #808080;
   opacity: 0.5;
 }
 
@@ -35,7 +35,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
-  background: #2b2b2b;
+  background: white;
   border: 4px solid #AAA;
   -webkit-box-shadow: 1px 1px 15px #222;
   -moz-box-shadow: 1px 1px 15px #222;
@@ -86,15 +86,14 @@
 }
 
 #dialog .DiaDisplayText {
-  font-family: "Roboto Condensed", sans-serif;
-  color: white;
+  font-family: inherit;
   height: 200px;
   padding: 4px 8px;
   overflow: scroll;   /* vertical scrollbar is mandatory */
   overflow-x: hidden; /* but horizontal scrollbar is forbidden */
   font-size: 14px;
   white-space: pre-wrap;
-  /*background: black;*/
+  background: #FED;
 }
 
 /* End of Dialog default stylesheet. */
