--- a/interpreter/glkote.css
+++ b/interpreter/glkote.css
@@ -53,7 +53,7 @@
      can change that, but don't touch the position or margin. */
   position: absolute;
   margin: 0px;
-  background: #2b2b2b;
+  background: white;
 }
 
 .BufferWindow {
@@ -70,7 +70,7 @@
 }
 
 .GridWindow {
-  background: black;
+  background: #D0D0C0;
   overflow: hidden;
   font-family: monaco, andale mono, lucidatypewriter, courier, courier new, monospace; /* necessary! */
   font-size: 14px;
@@ -108,9 +108,9 @@
      of a window when it needs paging. */
   font-weight: bold;
   position: absolute;
-  background: black;
-  color: #8fde5d;
-  /*opacity: 0.5;*/
+  background: #603010;
+  color: #FFFFCC;
+  opacity: 0.5;
   padding: 2px 6px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -120,7 +120,7 @@
   /* This describes the small horizontal mark that appears in a window
      when it needs paging. */
   position: absolute;
-  background: black;
+  background: #B09888;
   height: 2px;
   width: 12px;
   top: 0px;
@@ -135,14 +135,13 @@
   padding: 0px;
   outline-width: 0px;
   outline-style: none;
-  background: #2b2b2b;
-  font-weight: 300;
+  background: none;
+  font-weight: bold;
 }
 
 .BufferWindow .Input {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 15px;
-  color: #8fde5d;
 }
 
 .GridWindow .Input {
@@ -186,16 +185,10 @@
 /* The following are the standard Glk styles. */
 
 .Style_normal {
-  font-family: "Roboto Condensed", sans-serif;
-  line-height: 200%;
-  font-weight: 300;
 }
 
 .Style_emphasized {
-  font-family: "Roboto Condensed", sans-serif;
   font-style: italic;
-  line-height: 200%;
-  font-weight: 300;
 }
 
 .Style_preformatted {
@@ -207,30 +200,19 @@
 }
 
 .BufferWindow .Style_header {
-  font-family: "Roboto Condensed", sans-serif;
   font-size: 17px;
-  line-height: 200%;
-  font-weight: bold;
 }
 
 .Style_subheader {
-  font-family: "Roboto Condensed", sans-serif;
   font-weight: bold;
-  line-height: 200%;
 }
 
 .Style_alert {
-  font-family: "Roboto Condensed", sans-serif;
   font-weight: bold;
-  line-height: 200%;
-  font-weight: 300;
 }
 
 .Style_note {
-  font-family: "Roboto Condensed", sans-serif;
   font-style: italic;
-  line-height: 200%;
-  font-weight: 300;
 }
 
 .Style_blockquote {
@@ -238,10 +220,8 @@
 }
 
 .Style_input {
-  font-family: "Roboto Condensed", sans-serif;
-  font-weight: 300;
-  color: #8fde5d;
-  line-height: 200%;  
+  font-weight: bold;
+  color: #300000;
 }
 
 .Style_user1 {
